# hypothesis_factory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  init.sql  pyproject.toml
.github/workflows/: ci.yaml
docs/: API_CONTRACT.md  REQUIREMENTS.md  few_shot_examples.md
services/api_gateway/: .env.example  Dockerfile  README.md  flake.nix  pyproject.toml
services/api_gateway/scripts/: __init__.py  create_admin.py  create_default_users.py
services/api_gateway/src/: config.py  main.py
services/api_gateway/src/api/: dependencies.py  router.py  schemas.py
services/api_gateway/src/api/routes/: admin.py  auth.py  results.py  sessions.py  tasks.py
services/api_gateway/src/database/: base.py  models.py  session.py
services/api_gateway/src/utils/: auth.py  celery_client.py  exceptions.py  log_config.py
services/api_gateway/tests/: conftest.py
services/api_gateway/tests/integration/: test_api.py
services/api_gateway/tests/unit/: test_user_model.py
services/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
services/frontend/src/: App.tsx  index.css  main.tsx
services/frontend/src/components/auth/: AuthOverlay.tsx  AuthPage.tsx  LoginPrompt.tsx
services/frontend/src/components/chat/: AssistantMessage.tsx  ChatThread.tsx  EmptyState.tsx  HypothesisResult.tsx  MessageActions.tsx  SaveModal.tsx  ThinkingTrace.tsx  UserMessage.tsx
services/frontend/src/components/composer/: Composer.tsx  ContextTray.tsx
services/frontend/src/components/generation/: GenerateButton.tsx  KnowledgeBaseInput.tsx  MaterialsImport.tsx  ProblemInput.tsx
services/frontend/src/components/graph/: ChainsTab.tsx  GraphCanvas.tsx  GraphLegend.tsx  GraphModal.tsx  NodeDetail.tsx
services/frontend/src/components/history/: HistoryTable.tsx
services/frontend/src/components/layout/: AppLayout.tsx  ChatShell.tsx  Header.tsx
services/frontend/src/components/loading/: GenerationLoader.tsx
services/frontend/src/components/report/: BusinessReport.tsx  HypothesisCard.tsx  ReportActions.tsx
services/frontend/src/components/sidebar/: BrandMark.tsx  ProfileMenu.tsx  Sidebar.tsx
services/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FileDropzone.tsx  Flag.tsx  Input.tsx  Spinner.tsx  Switch.tsx  Textarea.tsx
services/frontend/src/data/: mock.ts
services/frontend/src/lib/: api.ts  auth.tsx  demo.ts  draft.ts  export.ts  format.ts  graph.ts  i18n.tsx  lang.ts
services/frontend/src/lib/fonts/: dejavu.ts
services/frontend/src/pages/: HistoryPage.tsx  MainPage.tsx
services/frontend/src/types/: index.ts
services/ml_worker/: .env.example  Dockerfile  README.md  flake.nix  pyproject.toml
services/ml_worker/src/: celery_app.py  config.py  main.py  models.py
services/ml_worker/src/ai_pipeline/: __init__.py  state.py  workflow.py
services/ml_worker/src/ai_pipeline/agents/: __init__.py  generator.py  graph_agent.py  graph_extractor.py  relation_extractor.py  reviewer.py  validator.py
services/ml_worker/src/ai_pipeline/chunking/: __init__.py  hybrid_chunker.py
services/ml_worker/src/ai_pipeline/clients/: __init__.py  yandex_ai_studio.py
services/ml_worker/src/ai_pipeline/embeddings/: __init__.py  yandex_embedder.py
services/ml_worker/src/ai_pipeline/graph/: __init__.py  builder.py  graph_schema.py
services/ml_worker/src/ai_pipeline/rag/: __init__.py  history_rag.py  knowledge_rag.py  relation_rag.py
services/ml_worker/src/ai_pipeline/tools/: __init__.py  postgres_tools.py
services/ml_worker/src/ai_pipeline/vector_store/: __init__.py  chroma_store.py
services/ml_worker/src/db/: __init__.py  models.py
services/ml_worker/src/ner/: __init__.py  db_handler.py  extractors.py  ner_extractor.py  router.py
services/ml_worker/src/report/: __init__.py
services/ml_worker/src/storage/: __init__.py
services/ml_worker/src/tasks/: process_message.py
services/ml_worker/tests/: conftest.py  test_ner.py
services/ml_worker/tests/ai_pipeline_tests/: conftest.py  test_workflow.py
services/ml_worker/tests/ai_pipeline_tests/mixins/: __init__.py  chroma_mixins.py  chunking_mixins.py  db_mixins.py  llm_mixins.py
services/ml_worker/tests/ai_pipeline_tests/test_agents/: test_generator.py  test_graph_agent.py  test_graph_extractor.py  test_relation_extractor.py  test_reviewer.py  test_validator.py
services/ml_worker/tests/ai_pipeline_tests/test_chunking/: test_hybrid_chunker.py
services/ml_worker/tests/ai_pipeline_tests/test_embeddings/: test_yandex_embedder.py
services/ml_worker/tests/ai_pipeline_tests/test_graph/: test_builder.py  test_graph_schema.py
services/ml_worker/tests/ai_pipeline_tests/test_rag/: test_history_rag.py  test_knowledge_rag.py  test_relation_rag.py
services/ml_worker/tests/ai_pipeline_tests/test_tools/: test_postgres_tools.py
services/ml_worker/tests/ai_pipeline_tests/test_vector_store/: test_chroma_store.py
services/ml_worker/tests/unit/: test_process_message.py
tests/: conftest.py
tests/unit/: test_user_model.py
