[project]
name = "hypothesis-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = []

[tool.uv.workspace]
members = [
    "services/api_gateway",
    "services/ml_worker",
]

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
]



[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 88
indent-width = 4
exclude = [
    ".git/",
    "venv/",
    ".venv/",
    "vscode/",
    "__pycache__/",
    ".ruff_cache/",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "N", "I", "C90", "T", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "services/api_gateway"

