[project]
name = "hypothesis-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = []

[tool.uv.workspace]
members = [
    "services/api_gateway",
    "services/ml_worker",
]

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]


[tool.ruff]
src = [
    "services/api_gateway/src",
    "services/ml_worker/src",
]
target-version = "py313"
line-length = 79
indent-width = 4
exclude = [
    ".git/",
    "venv/",
    ".venv/",
    "vscode/",
    "__pycache__/",
    ".ruff_cache/",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "N", "I", "C90", "T", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"services/api_gateway/tests/**" = ["S101", "E501"]
"services/ml_worker/tests/**" = ["S101", "E501"]
"services/ml_worker/src/ai_pipeline/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
