[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for Hypothesis Factory"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "pydantic>=2.9.0",
    "celery[redis]>=5.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "E501"]

