[project]
name = "ml-worker"
version = "0.1.0"
description = "ML pipeline for Hypothesis Factory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
