[project]
name = "ml-worker"
version = "0.1.0"
description = "ML pipeline for Hypothesis Factory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "gliner>=0.2.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0.0"]
unstructured = ["unstructured>=0.10.0"]
